tests/resource/valid/definition/function_no_return_type.mamba
def f(x: Int) =>
    if x > 10 then
        20
    else
        x
