tests/resource/invalid/type/function/return_undefined.mamba
def f() -> Int => if True then 10 else undefined
